fix(web-components): fix focus overlapping text
add padding to the helper so that the focus doesn't block it

1948

--- a/packages/web-components/src/components/ic-search-bar/ic-search-bar.css
+++ b/packages/web-components/src/components/ic-search-bar/ic-search-bar.css
@@ -6,6 +6,7 @@
 
 :host(.ic-search-bar-search) {
   --divider-height: 1.5rem;
+  --ic-input-label-helpertext-padding: var(--ic-space-xxs);
 }
 
 :host(.ic-search-bar-search.ic-search-bar-small) {
